--- a/release_log.html
+++ b/release_log.html
@@ -1,4 +1,9 @@
 <div class="slider-revolution-update-list">
+<h3 class="version-number">Version 6.5.11 (18th November 2021)</h3>	
+	<div class="bugfix"><strong style="font-weight:700">Bugfixes</strong></div>
+	<ul>
+		<li>Javascript Error breaks the Global Settings in Overview Mode and throws Console Error getConcVals</li>		
+	</ul>	
 	<h3 class="version-number">Version 6.5.10 (17th November 2021)</h3>
 	<div class="change"><strong style="font-weight:700">Changes</strong></div>	
 	<ul>
