--- a/release_log.html
+++ b/release_log.html
@@ -1,8 +1,116 @@
 <div class="slider-revolution-update-list">
+	<h3 class="version-number">Version 6.5.22 (18th May 2022)</h3>
+	<div class="bugfix"><strong style="font-weight:700">Changes</strong></div>
+	<ul>
+		<li>Carousel Stop on Click: Added new option, by default carousel progress stops if user clicks on slider, this option lets you choose to continue auto rotate progress after user clicks on slider.</li>
+	</ul>
+	<div class="bugfix"><strong style="font-weight:700">Bugfixes</strong></div>
+	<ul>
+		<li>Importing a slider may create an additional empty slide</li>
+		<li>Opening modal with openModalAPI method fails with console error</li>
+		<li>Parallax jumps on iOS if URL field gets removed</li>
+		<li>Action triggered static layers ignore triggered frame call on last slide after slide swap</li>
+		<li>Before & After AddOn copy to clipboard after image is not working. Latest 3.0.6 version of Before & After AddOn required to fix issue</li>
+		<li>Glitch & noise effect does not fade out after fading once on 1st slide</li>
+	</ul>
+	<h3 class="version-number">Version 6.5.21 (2nd May 2022)</h3>
+	<div class="bugfix"><strong style="font-weight:700">Changes</strong></div>
+	<ul>
+		<li>Autoplay enabled videos will play with audio if user has interacted with page</li>
+		<li>Loop enabled background videos will auto pause/play if page visibility state changes due to switching tabs etc</li>
+		<li>Added option under Advanced options to fix glitches on iOS Filters. It will add a tiny 0.0001 value to  x, z, rotationX or to default (based on Layer type) to avoid cuts and other distortions on layers when slider is running on iOS</li>
+	</ul>
+	<div class="bugfix"><strong style="font-weight:700">Bugfixes</strong></div>
+	<ul>
+		<li>Activation through wp-cli returns a fatal error</li>
+		<li>Moving frames on timeline before playing the slide onces breaks with javascript error on static slide</li>
+		<li>Exit animation of Static layers works only on slide change, animation before Slide end is ignored</li>
+	</ul>
+	<h3 class="version-number">Version 6.5.20 (12th April 2022)</h3>
+	<div class="change"><strong style="font-weight:700">Changes</strong></div>
+	<ul>
+		<li>Added new action to ask for permission to use gyroscope accelerator on iPhone devices if needed. Read more in FAQ</li>
+		<li>Added page scroll possibility for modals to use modals as adverts</li>
+		<li>Lottie Addon: Canvas renderer for lottie now has new maxdpr option to help with performance optimization</li>
+	</ul>
+	<div class="bugfix"><strong style="font-weight:700">Bugfixes</strong></div>
+	<ul>
+		<li>Elementor deprecation message _register_controls() shows up using the newest Elementor version</li>
+		<li>If video was muted initially then video auto-mutes after pausing and playing</li>
+		<li>Blurred elements in Safari under masks shows broken edges, rendering issues</li>
+		<li>CSS fixes (i.e. speak-as and willow filter)</li>
+		<li>WP_PLUGIN_URL creates JavaScript error if it has a newline added (\n\r)</li>
+		<li>Meta data current_slide_index displays incorrect slide number on first slide</li>
+		<li>Vimeo stream keeps pausing and playing</li>
+		<li>YouTube video is blurry if used with poster</li>
+		<li>Vimeo videos are limited to 20 videos</li>
+	</ul>
+	<h3 class="version-number">Version 6.5.19 (14th March 2022)</h3>
+	<div class="bugfix"><strong style="font-weight:700">Bugfixes</strong></div>
+	<ul>
+		<li>Opening specific modal slide with Panzoom effect fails</li>
+		<li>On mobile, layer with long text has padding on right until slider loads completely</li>
+	</ul>
+	<h3 class="version-number">Version 6.5.18 (8th March 2022)</h3>
+	<div class="bugfix"><strong style="font-weight:700">Bugfixes</strong></div>
+	<ul>
+		<li>Slider editor has issues if the WooCommerce Advanced Quantity plugin is enabled</li>
+		<li>Hosts that do not allow connection to external servers creating longer loading times</li>
+		<li>Unwanted categories are shown in meta tags added to layers</li>
+		<li>Deleting global layers fails with console errors</li>
+		<li>Static layers with percentage based width or height do generate unneeded padding on mobile views</li>
+		<li>Google page speed warns against using unload event listener</li>
+		<li>6.5.17 regression: Slider with Advanced Transitions flashes after transition.</li>
+	</ul>
+	<h3 class="version-number">Version 6.5.17 (23rd February 2022)</h3>
+	<div class="change"><strong style="font-weight:700">Changes</strong></div>
+	<ul>
+		<li>Added internal hook for manipulating layer positions and dimensions due to external addons</li>
+	</ul>
+	<div class="bugfix"><strong style="font-weight:700">Bugfixes</strong></div>
+	<ul>
+		<li>Changing slider dimensions is not possible if external url is empty</li>
+		<li>iOS Safari 15 crashes if slider has too many slides</li>
+		<li>YouTube video mutes again after seeking/scrubbing video</li>
+		<li>Charts Addon: Chart renders smaller on Safari because of browser specific bug</li>
+		<li>Charts Addon: Chart values are offset from position due browser specific bug</li>
+		<li>Panorama Addon: Poles have artifacts if image loads slow on slow</li>
+	</ul>
+	<h3 class="version-number">Version 6.5.16 (17th February 2022)</h3>
+	<div class="change"><strong style="font-weight:700">Changes</strong></div>
+	<ul>
+		<li>Changed notice containers in the WordPress plugin page for a better user experience</li>
+	</ul>
+	<div class="bugfix"><strong style="font-weight:700">Bugfixes</strong></div>
+	<ul>
+		<li>Editor does not render advanced opacity on layers</li>
+		<li>Force overflow causes layers to be hidden on mobile and to be visible on Android Chrome</li>
+		<li>Third party object extensions may kill the initialisation process of Slider Revolution in preview mode</li>
+		<li>Mobile height change is not respected when URL bar height changes on mobile devices</li>
+	</ul>
+	<h3 class="version-number">Version 6.5.15 (31st January 2022)</h3>
+	<div class="bugfix"><strong style="font-weight:700">Bugfixes</strong></div>
+	<ul>
+		<li>Opening a WordPress media modal fails because the editor script overwrites the _ variable</li>
+		<li>Notice occurs in post based sliders, as $attr1 is undefined</li>
+		<li>Advanced transitions fail on websites using subdomain as CDN</li>
+		<li>Gutenberg block preview not available</li>
+		<li>Gutenberg editor glitches on mouse enter and hover</li>
+		<li>Gutenberg template not updating after disabling blank page</li>
+		<li>Slider Revolution settings on WordPress pages are stuck on the top</li>
+		<li>Bottom margin issues on fixed slider scroll processes where the Slider is higher than the page</li>
+		<li>Exporting modules with advanced transitions ignore the predefined values</li>
+		<li>Sometimes glitches occur in the media library after triggering dropdowns in module editor</li>
+		<li>Carousel height jumps when a slide comes in focus after latest update 6.5.14 and 6.5.13 </li>
+		<li>Console logs and errors are visible in some rare cases</li>
+		<li>Animation issues on menu in some older templates</li>
+	</ul>
+
 	<h3 class="version-number">Version 6.5.14 (6th January 2022)</h3>
 	<div class="bugfix"><strong style="font-weight:700">Bugfixes</strong></div>
 	<ul>
 		<li>JS error in some rare cases due to a conflict between underscore.js and some editor scripts by overwriting the global _ variable</li>	
+		<li>Rows in the carousel slider are shifted once all layers are shown once in all slides</li>
 	</ul>
 	<h3 class="version-number">Version 6.5.13 (6th January 2022)</h3>	
 	<div class="bugfix"><strong style="font-weight:700">Bugfixes</strong></div>
@@ -14,7 +122,7 @@
 		<li>Hover zoom breaks out of mask after dragging carousel</li>
 		<li>STRONG tag lineheight is different (25 default) as the lineheight of the layer itself</li>
 		<li>JS warnings in Safari when backdrop filters are used</li>
-		<li>Not existing modal pop up on scroll drop JS failures</li>
+		<li>Not existing modal pop up on scroll drop JS failures</li>		
 	</ul>
 	<h3 class="version-number">Version 6.5.12 (21st December 2021)</h3>
 	<div class="newfeature"><strong style="font-weight:700">New Features</strong></div>
