--- a/release_log.html
+++ b/release_log.html
@@ -1,4 +1,17 @@
 <div class="slider-revolution-update-list">
+	<h3 class="version-number">Version 6.5.24 (26th May 2022)</h3>
+	<div class="bugfix"><strong style="font-weight:700">Bugfixes</strong></div>
+	<ul>
+		<li>Missing width/height values in images can produce notices</li>
+		<li>Slow loading times on mobile, if elementor is activated due to lazy loading</li>
+		<li>WooCommerce slider may appear empty even though categories are selected</li>
+	</ul>
+	<h3 class="version-number">Version 6.5.23 (24th May 2022)</h3>
+	<div class="bugfix"><strong style="font-weight:700">Bugfixes</strong></div>
+	<ul>
+		<li>WooCommerce slider does not consider child posts/variants in filtering for price ranges</li>
+		<li>Layers become invisible if duration of layer is 0</li>
+	</ul>
 	<h3 class="version-number">Version 6.5.22 (18th May 2022)</h3>
 	<div class="bugfix"><strong style="font-weight:700">Changes</strong></div>
 	<ul>
